# gtest_example

./: .gitignore  CMakeLists.txt  README.md
docs/: gmock.md  stub_return.md
docs/others/: gtest.md  lc.md  life.md
gtest_gmock_demo/test/: a.out  mock_database.h  user_service_test.cpp
include/: test_stack.h
lib/gtest/: CMakeLists.txt  README.md
src/: test.cpp  test_factorial.h
src/test/: utest.cpp
test/: utest.cpp
